# veritas-app

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  core.rs  main.rs  message_logger.rs  models.rs  network.rs  packet_handler.rs  panels.rs  widgets.rs
src/core/: config.rs  helpers.rs  inject.rs  launcher.rs  message_logger.rs  models.rs  network.rs  packet_handler.rs  updater.rs
src/panels/: av_panel.rs  central_panel.rs  menubar_panel.rs  sidebar_panel.rs  statusbar_panel.rs
src/widgets/: av_damage_plot_widget.rs  damage_bar_widget.rs  damage_distribution_widget.rs  log_widget.rs  turn_damage_plot_widget.rs
