[package]
name = "veritas-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veritas"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31.1", features = [
    "default"
] }
egui_plot = "0.31.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.44.1", features = ["full"] }
csv = "1.3.1"
anyhow = "1.0.97"
directories = "5.0"
plotters = "0.3.3"