[package]
name = "veritas-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "veritas"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31.1", features = [
    "default"
] }
egui_plot = "0.31.0"
egui_material_icons = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
csv = "1.3.1"
anyhow = "1.0.97"
image = "0.25.6"
directories = "6.0.0"
egui_zhcn_fonts = "0.1"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
]