[package]
name = "veritas-app"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/NightKoneko/veritas-app"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NightKoneko/veritas-app"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "veritas"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31.1", features = [
    "default"
] }
egui_plot = "0.31.0"
egui_material_icons = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
csv = "1.3.1"
anyhow = "1.0.97"
image = "0.25.6"
directories = "6.0.0"
rfd = "0.15.3"
reqwest = { version = "0.12.15", features = ["json"] }
open = "5.3.2"
egui_zhcn_fonts = "0.1"
egui-toast = "0.17.0"
tempfile = "3.10.1"
self_update = { version = "0.42.0", features = [
    "archive-zip",
    "compression-zip-deflate",
    "rustls"
], default-features = false }

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
]
